--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -48,8 +48,8 @@
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Mon profil</a></li>
 
-<!--         <li><#%= link_to "Dashboard", car_path(@car) unless @car.id.nil? %></li>
- -->        <li><a href="#"></a></li>
+        <li><%= link_to "Dashboard", car_path(@car) if ( @car && @car.id) %></li>
+        <li><a href="#"></a></li>
 
       </ul>
     </div>
