Changed jpeg to jpg

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -60,7 +60,7 @@
         <h5>Pending</h5>
       </div>
       <div class="info-card-small">
-        <p><%= image_tag "ebay_logo.jpeg", width:100%></p>
+        <p><%= image_tag "ebay_logo.jpg", width:100%></p>
         <h5>Pending</h5>
       </div>
 
