--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: calc(100vh - 120px);
     h1 {
     margin: 20px;
     padding: 45px 10px 0px;
@@ -14,7 +15,7 @@
 // HOME DIAGONAL BOX
 .header-home {
   position: relative;
-  height: 290px;
+  height: 220px;
   margin: 0;
   padding: 0;
   // overflow: hidden;
@@ -28,7 +29,7 @@
   left: 0;
   width: 100%;
   // height: 375px;
-  height: 250px;
+  height: 180px;
   // Propositions couleurs du header:
   // background-image: linear-gradient(#005c97, #363795);
   // background-image: linear-gradient(#00d2ff, #3a7bd5);
@@ -53,6 +54,7 @@
   img {
     width: 90%;
     margin: 18px;
+    margin-top: -12px
   }
 }
 
