--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: calc(100vh - 120px);
+  height: calc(100vh - 140px);
     h1 {
     margin: 20px;
     padding: 45px 10px 0px;
@@ -29,7 +29,7 @@
   left: 0;
   width: 100%;
   // height: 375px;
-  height: 180px;
+  height: 150px;
   // Propositions couleurs du header:
   // background-image: linear-gradient(#005c97, #363795);
   // background-image: linear-gradient(#00d2ff, #3a7bd5);
@@ -52,9 +52,10 @@
 #main-title{
   transform: skewY(6deg);
   img {
-    width: 90%;
+    width: 70%;
     margin: 18px;
-    margin-top: -12px
+    margin-top: -12px;
+    margin-left: 55px;
   }
 }
 
