--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -15,7 +15,7 @@
 .info-card-small {
   box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
   transition: all 0.3s ease;
-  height: 60px;
+  height: 100%;
   padding: 10px 30px;
   margin-top: 5px;
   font-size: 14px;
@@ -28,8 +28,8 @@
 .price-card {
   box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
   transition: all 0.3s ease;
-  height: 120px;
   width: 100vh;
+  height: 170px;
   font-size: 14px;
   background-color: white;
 
@@ -43,17 +43,24 @@
 }
 
 .price-card-content {
-  padding: 20px
+  padding: 20px;
+  text-align:center;
 }
 
 .price-card-inner-content {
   text-align:center;
-  display:flex;
-  justify-content: space-around;
-  color: #C1C1BF
+  justify-content: center;
+  color: #C1C1BF;
+  padding:10px;
 }
 
 .price-card-titles {
   text-align:center;
   margin-bottom:0px;
+}
+
+.card-price-status {
+  text-align:center;
+  margin-bottom: 10px;
+  font-size:14px;
 }
