--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="info-card-large">
     <div>
-      <p>Votre Véhicule</p>
+      <p style="color:white">Votre Véhicule</p>
     </div>
     <div>
       <h3> <%= @car.car_brand %> <%= @car.model_type %></h3>
@@ -15,8 +15,10 @@
         <p class='price-card-titles'><strong>Prix demandé</strong></p>
         <div class='price-card-inner-content' style='color:black'>
         <h3> <%= @car.estimated_price %> € </h3>
-        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModalCenter">
-        <p style='margin-top: 17px'>Mettre à jour</p>
+        <div class="card-price-status">
+          <button type="button" class="btn-link" data-toggle="modal" data-target="#exampleModalCenter">
+          <p >Mettre à jour</p>
+        </div
         </button>
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
@@ -45,8 +47,10 @@
         <p class='price-card-titles'> <strong>Recommendation Karl</strong></p>
         <div class='price-card-inner-content'>
           <h3> <%= @car.estimated_price %> € </h3>
-          <h4 style='color:#FDD116; margin-top: 30px'>Maintenir</h4>
-          <div style='margin-top: 30px'> <%= image_tag "graphic (1).png", width: 24%> </div>
+          <div class="card-price-status">
+           <p style='color:#FDD116'>Maintenir</p>
+          </div>
+
         </div>
       </div>
     </div>
@@ -70,7 +74,7 @@
     <div class = "dashboard_container">
       <p class="header-dashboard"> Projection de dépréciation sur 24 mois</p>
       <div id=price_evolution>
-        <canvas id="my_price_evolution_chart" width="300" height="100" data-prices="<%= @car_price_evolution.to_json%>"></canvas>
+        <canvas id="my_price_evolution_chart" width="100%" data-prices="<%= @car_price_evolution.to_json%>"></canvas>
       </div>
     </div>
 </div>
