--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -6,7 +6,7 @@
   display:flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  text-align: left;
   background-image: linear-gradient(to left bottom, #1306a1, #005ad9, #0087d6, #00aeaf, #16cf86);
   color: white;
 }
