--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -60,7 +60,7 @@
 }
 
 .body-home{
-  padding: 10px 25px 0px 25px;
+  padding: 10px 15px 0px 15px;
 }
 
 .comment-form {
@@ -109,6 +109,8 @@ color: rgba(0, 0, 0, 0.66);
   flex-direction: row;
   justify-content: center;
   margin-top: 15px;
+  margin-right: -10px;
+  margin-left: -10px;
 }
 
 //SLIDER RANGE (BOOTSTRAP):
