--- a/app/assets/stylesheets/components/_camera.scss
+++ b/app/assets/stylesheets/components/_camera.scss
@@ -7,34 +7,35 @@
 //     filter: FlipH;
 // }
 #camera--trigger-1{
-    width: 200px;
+    width: 93%;
     background-color: black;
     color: white;
     font-size: 16px;
     border-radius: 30px;
     border: none;
-    padding: 15px 20px;
+    padding: 17px 20px;
     text-align: center;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
     position: fixed;
-    bottom: 30px;
-    left: calc(50% - 100px);
+    // bottom: 89px;
+    // left: calc(50% - 100px);
     z-index: 1;
+    margin-left: -2px;
 }
 
 #camera--trigger-2{
-    width: 200px;
+    width: 94%;
     background-color: black;
     color: white;
     font-size: 16px;
     border-radius: 30px;
     border: none;
-    padding: 15px 20px;
+    padding: 17px 20px;
     text-align: center;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
     position: fixed;
-    bottom: 30px;
-    left: calc(50% - 100px);
+    bottom: 90px;
+    // left: calc(50% - 100px);
     z-index: 1;
 }
 
