--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -73,12 +73,16 @@
 
  <div class="form4 hidden">
     <div class="edit-pictures">
-
       <div class="edit-pictures-1">
-        <h5>Photo frontale</h5>
-
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+          aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
+          </div>
+        </div>
+        <div class="edit-pictures-1-title">
+          <h5>Photo frontale</h5>
+        </div>
         <div class="photo-upload-features">
-
           <main id="camera">
           <!-- Camera sensor -->
             <canvas id="camera--sensor"></canvas>
@@ -89,51 +93,45 @@
                 <p>Prenez une photo de face</p>
                 <div>  <%= image_tag "sportive-car-front-view.png"%></div>
               </div>
-
-            <a id="camera--trigger-1" class="btn-hover color-5">Prendre photo</a>
-
-
-
           </main>
-
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="70"
-            aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
-            </div>
-          </div>
-
         </div>
+      </div>
+      <div class="edit-pictures-2">
+          <a id="camera--trigger-1" class="btn-hover color-5">Prendre photo</a>
       </div>
     </div>
   </div>
 
-
   <div class="form5 hidden">
-
     <div class="form5-1">
+      <div class="form5-1-1">
 
-      <div class="edit-pictures-2">
-           <!-- Camera output -->
-        <img src="//:0" alt="" id="camera--output">
-        <%= f.input :photo_1, as: :hidden, class: "photo-upload" %>
+        <div class="edit-pictures-2">
+             <!-- Camera output -->
+          <img src="//:0" alt="" id="camera--output">
+          <%= f.input :photo_1, as: :hidden, class: "photo-upload" %>
+        </div>
       </div>
-
       <div class="edit-pictures-3">
         <%= f.submit "Étape suivante", class: "btn-hover color-5", id: "submit-picture-1"%>
       </div>
-
     </div>
-
   </div>
 
    <div class="form6 hidden">
-    <div class="edit-pictures">
-
-      <div class="edit-pictures-1">
+    <div class="form6-1">
+      <div class="form6-1-1">
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
+          </div>
+        </div>
+      </div>
+      <div class="form6-1-2">
         <h5>Photo du coté</h5>
-
+      </div>
+      <div class="form6-1-3">
         <div class="photo-upload-features">
-
           <main id="camera1">
           <!-- Camera sensor -->
             <canvas id="camera--sensor-1"></canvas>
@@ -144,11 +142,7 @@
                 <p>Prenez une photo du coté</p>
                 <div>  <%= image_tag "car-facing-left.png"%></div>
             </div>
-
-            <a id="camera--trigger-2" class="btn-hover color-5">Prendre photo</a>
-
           </main>
-
             <%#= f.input :photo_2, label: "Photo 2:", class: "photo-upload" %>
             <%#= f.input :photo_2_cache, as: :hidden, class: "photo-upload" %>
             <%#= f.input :photo_3, label: "Photo 3:", class: "photo-upload" %>
@@ -156,16 +150,31 @@
         </div>
       </div>
     </div>
+    <div class="form6-2">
+        <a id="camera--trigger-2" class="btn-hover color-5">Prendre photo</a>
+    </div>
   </div>
+
 
 
   <div class="form7 hidden">
 
     <div class="form7-1">
-      <div class="edit-pictures-2">
-           <!-- Camera output -->
-        <img src="//:0" alt="" id="camera--output-1">
-        <%= f.input :photo_2, as: :hidden, class: "photo-upload" %>
+
+      <div class="form7-1-1">
+
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
+          </div>
+        </div>
+
+        <div>
+             <!-- Camera output -->
+          <img src="//:0" alt="" id="camera--output-1">
+          <%= f.input :photo_2, as: :hidden, class: "photo-upload" %>
+
+        </div>
       </div>
 
       <div class="edit-pictures-3">
