--- a/app/assets/stylesheets/pages/_first_estimation.scss
+++ b/app/assets/stylesheets/pages/_first_estimation.scss
@@ -64,6 +64,16 @@
   margin-bottom: -40px;
 }
 
+.container {
+  position: relative;
+}
+
+.saved-price {
+  position: absolute;
+  margin-bottom : -30px;
+  right: 50px;
+}
+
 .chartjs-render-monitor {
   height: 290px !important;
 }
