--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -1,7 +1,8 @@
 <div class ="container" class="first-estimation-body">
+  <div><%=((@car.estimated_price)-(@car.estimated_price / 1.3)).round%>€</div>
   <div class="first-estimation-text col-xs-12">
     <h5>Première estimation</h5>
-    <p>Notre algorythme a évalué le marché.</p>
+    <p>Notre algorithme a évalué le marché.</p>
     <p>Gagnez <strong class="black-matter"><%= ((@car.estimated_price)-(@car.estimated_price / 1.3)).round%>€</strong> grâce à <strong class="black-matter">Karl</strong>, et générez automatiquement votre annonce sur 2 sites de vente entre particuliers, en moins de 3 minutes.</p>
   </div>
 
@@ -19,7 +20,8 @@
   </div>
 
   <div id=chart>
-    <canvas id="myChart" data-prices="<%= @car_prices.to_json%>"></canvas>
+    <canvas id="myChart" data-prices="<%= @car_prices.to_json%>">
+    </canvas>
   </div>
 
   <div class="info-row-2">
