JS de la new damage

--- a/app/assets/stylesheets/damages/_new.scss
+++ b/app/assets/stylesheets/damages/_new.scss
@@ -139,3 +139,23 @@
     font-size: 12px;
   }
 }
+
+.nature-damages-2 {
+  margin-top: 40px;
+}
+
+.nature-damages-6-1 {
+  margin-top: 60px;
+}
+
+.info-card-small {
+  cursor: pointer;
+}
+
+.green-btn {
+  color: #5fca3e!important;
+}
+
+.h5-title-damage {
+  font-size: 15px;
+}
