--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="form-component-2">
-            <%= f.submit "Découvrez le vrai prix de votre voiture !", class: "btn-hover color-5" %>
+            <%= f.submit "Estimez le prix de votre voiture !", class: "btn-hover color-5" %>
           </div>
           <% end %>
         </div>
