--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -25,6 +25,19 @@
   vertical-align: middle;
 }
 
+.info-card-small-damage {
+  box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
+  transition: all 0.3s ease;
+  height: 100%;
+  padding: 10px 30px;
+  margin-top: 5px;
+  font-size: 14px;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  vertical-align: middle;
+}
+
 .price-card {
   box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
   transition: all 0.3s ease;
