--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -26,10 +26,10 @@
     <div class="choose-form-damage-nature form-damage-nature">
       <div class="choose-form-damage-nature-container">
         <div class="choose-form-damage-nature-1">
-          <h13>Quelle est la nature de votre dommage ?</h13>
+          <h13>Le dommage concerne:</h13>
         </div>
         <div class="choose-form-damage-nature-2">
-          <ul class="damages-type">
+          <ul style="margin-top:10px; margin-bottom:100px" class="damages-type">
             <li data-name="carrosserie" class="btn" data-target="form-carrosserie">
               <i class="fas fa-car-crash"></i>
               <h4 id="damages-type-font">Carrosserie</h4>
@@ -50,15 +50,17 @@
         <%= f.input :nature, as: :hidden, input_html: { id: 'true-nature-carrosserie'}%>
         <div class="nature-damages">
           <div class="nature-damages-1">
-            <h13>Le dommage sur la carrosserie concerne: </h13>
+            <!-- <h13>Le dommage sur la carrosserie concerne: </h13> -->
           </div>
           <div class="nature-damages-2">
             <div class="damages-nature">
               <% Damage::CARROSSERIE.each do |damage| %>
-              <div class="info-card-small" data-value="<%= damage %>" data-name="carrosserie">
-                <p><%= image_tag "002-tick-1.png"%></p>
-                <h5> <%= damage %> </h5>
+
+              <div class="info-card-small-damage btn" data-value="<%= damage %>" data-name="carrosserie">
+                <i class="fas fa-check"></i>
+                <h5 class="to-be-green h5-title-damage"> <%= damage %> </h5>
               </div>
+
               <% end %>
             </div>
             <%= f.input :title, as: :hidden, input_html: { id: 'true-title-carrosserie'}%>
@@ -90,15 +92,16 @@
         <div class="nature-damages">
 
           <div class="nature-damages-5">
-            <h13>Le dommage sur la mécanique concerne: </h13>
+            <!-- <h13>Le dommage sur la mécanique concerne: </h13> -->
           </div>
 
           <div class="nature-damages-6">
             <div class="damages-nature nature-damages-6-1">
               <% Damage::MECANIQUE.each do |damage| %>
-              <div class="info-card-small" data-value="<%= damage %>" data-name="mecanique">
-                <p><%= image_tag "002-tick-1.png"%></p>
-                <h5> <%= damage %> </h5>
+
+              <div class="info-card-small-damage btn" data-value="<%= damage %>" data-name="mecanique">
+                <i class="fas fa-check"></i>
+                <h5 class="to-be-green h5-title-damage"> <%= damage %> </h5>
               </div>
               <% end %>
             </div>
