First estimation fixing

--- a/app/assets/stylesheets/pages/_first_estimation.scss
+++ b/app/assets/stylesheets/pages/_first_estimation.scss
@@ -14,8 +14,9 @@
   }
   text-align: center;
   margin-top: 10px;
-  .black-matter {
-    color: black !important;
+
+.black-matter {
+  color: black !important;
   }
   margin-bottom: 10px;
 }
@@ -37,7 +38,7 @@
     color: rgba(0, 0, 0, 0.66);
     margin: -6px 0 -2.5px !important;
   }
-  .black-matter {
+.black-matter {
     color: black !important;
   }
   margin-top: 0px;
@@ -71,8 +72,13 @@
 
 .saved-price {
   position: absolute;
-  margin-bottom : -30px;
-  right: 50px;
+  left: 67px;
+  top: 250px;
+  width: 100px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 15px;
+  font-weight: bolder;
 }
 
 .chartjs-render-monitor {
