--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -1,5 +1,6 @@
-<div class ="container" class="first-estimation-body">
-  <div><%=((@car.estimated_price)-(@car.estimated_price / 1.3)).round%>€</div>
+<div class ="container">
+<div class="saved-price"> <%=number_to_currency(((@car.estimated_price)-(@car.estimated_price / 1.3)), unit:"€", format: "%n %u", precision: 0)%> d'économie</div>
+  <div class="first-estimation-body">
   <div class="first-estimation-text col-xs-12">
     <h5>Première estimation</h5>
     <p>Notre algorithme a évalué le marché.</p>
