--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -1,4 +1,10 @@
-<div class ="container" class="first-estimation-body">
+<div class="fake-loader">
+  <div > <%= image_tag "civchoice-loading-gifs800x600", width:300 %></div>
+  <h4> En quelques instants, Karl calcule la véritable valeur de votre véhicule</h4>
+</div>
+
+
+<div class="first-estimation-body hidden">
   <div class="first-estimation-text col-xs-12">
     <h5>Première estimation</h5>
     <p>Notre algorythme a évalué le marché.</p>
