--- a/app/assets/stylesheets/pages/_first_estimation.scss
+++ b/app/assets/stylesheets/pages/_first_estimation.scss
@@ -73,7 +73,7 @@
 .saved-price {
   position: absolute;
   left: 67px;
-  top: 250px;
+  top: 59%;
   width: 100px;
   text-align: center;
   font-family: Roboto;
