--- a/app/assets/stylesheets/pages/_first_estimation.scss
+++ b/app/assets/stylesheets/pages/_first_estimation.scss
@@ -77,8 +77,8 @@
 
 .saved-price {
   position: absolute;
-  left: 67px;
-  top: 59%;
+  left: 15%;
+  top: 55%;
   width: 100px;
   text-align: center;
   font-family: Roboto;
