--- a/app/views/cars/first_estimation.html.erb
+++ b/app/views/cars/first_estimation.html.erb
@@ -1,6 +1,6 @@
 
 <div class="fake-loader">
-  <div > <%= image_tag "civchoice-loading-gifs800x600", width:300 %></div>
+  <div > <%= image_tag "loader.gif" %></div>
   <h4> En quelques instants, Karl calcule la véritable valeur de votre véhicule</h4>
 </div>
 
