--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -1,10 +1,10 @@
 {
-  "background_color": "#b13948",
+  "background_color": "#000000",
   "description": "Arrêtez de vous faire rouler",
   "display": "fullscreen",
   "icons": [
     {
-      "src": "<%= asset_path 'karl__5.png' %>",
+      "src": "<%= asset_path 'karl__5_.png' %>",
       "sizes": "192x192",
       "type": "image/png"
     }
