--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -108,6 +108,14 @@
     <div class="form5-1">
       <div class="form5-1-1">
 
+        <div class="form5-1-1-1">
+          <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="70"
+            aria-valuemin="0" aria-valuemax="100" style="width:55.5%">
+          </div>
+        </div>
+        </div>
+
         <div class="edit-pictures-2">
              <!-- Camera output -->
           <img src="//:0" alt="" id="camera--output">
@@ -122,6 +130,7 @@
 
    <div class="form6 hidden">
     <div class="form6-1">
+
       <div class="form6-1-1">
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -129,9 +138,11 @@
           </div>
         </div>
       </div>
+
       <div class="form6-1-2">
         <h5>Photo du coté</h5>
       </div>
+
       <div class="form6-1-3">
         <div class="photo-upload-features">
           <main id="camera1">
@@ -154,6 +165,7 @@
 
         </div>
       </div>
+
     </div>
     <div class="form6-2">
         <a id="camera--trigger-2" class="btn-hover color-5">Prendre photo</a>
@@ -182,7 +194,7 @@
         </div>
       </div>
 
-      <div class="edit-pictures-3">
+      <div class="form7-1-2">
           <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-picture-2"%>
       </div>
 
