--- a/app/assets/javascripts/manifest.json.erb
+++ b/app/assets/javascripts/manifest.json.erb
@@ -4,7 +4,7 @@
   "display": "fullscreen",
   "icons": [
     {
-      "src": "<%= asset_path 'karl__5_.png' %>",
+      "src": "<%= asset_path 'Icon_App.png' %>",
       "sizes": "192x192",
       "type": "image/png"
     }
