changements avec vincent

--- a/app/views/cars/final_message.html.erb
+++ b/app/views/cars/final_message.html.erb
@@ -27,7 +27,7 @@
   </div>
 
     <div class="dash">
-      <p><%= link_to "Rendez-vous dans votre dashboard", car_path(@car) if ( @car && @car.id) %></p>
+      <p><%= link_to "Vos statistiques ", car_path(@car) if ( @car && @car.id) %></p>
     </div>
 
 </div>
