--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -227,7 +227,7 @@
     </div>
 
     <div class="ad-form-wrapper-2">
-      <%= f.input :given_price, label: "Prix", as: :integer, input_html:{value: f.object.given_price.presence || "#{@car.estimated_price}"}%>
+      <%= f.input :given_price, label: "Prix", as: :integer, input_html:{value: f.object.given_price.presence || "#{@car.estimated_price-500}"}%>
     </div>
 
     <div class="ad-form-wrapper-3">
@@ -238,7 +238,7 @@
 
   <div class="final-step-button">
     <%= link_to final_message_car_path(@car) do %>
-      <button class="btn-hover color-5">Je valide !</button>
+      <button class="btn-hover color-5">Validez votre annonce !</button>
     <%end%>
   </div>
 
