avec germain poru le date picker

--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -167,7 +167,7 @@
         </div>
 
         <div class="edit-technical-control-1">
-          <%= f.input :next_technical_control_date, label: "Quelle est la date de votre dernier contrôle technique ?", as: :date %>
+          <%= f.input :next_technical_control_date, label: "Quelle est la date de votre dernier contrôle technique ?", as: :string, input_html: { class: "datepicker" } %>
         </div>
 
         <div class="edit-technical-control-2">
