--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -90,7 +90,6 @@
             <video id="camera--view" autoplay playsinline>
             </video>
               <div class="picture-content">
-                <p>Prenez une photo de face</p>
                 <div>  <%= image_tag "sportive-car-front-view.png"%></div>
               </div>
 
@@ -152,7 +151,6 @@
             <video id="camera--view-1" autoplay playsinline></video>
 
             <div class="picture-content">
-                <p>Prenez une photo du coté</p>
                 <div>  <%= image_tag "car-facing-left.png"%></div>
             </div>
           </main>
@@ -194,7 +192,7 @@
         </div>
       </div>
 
-      <div class="form7-1-2">
+      <div class="edit-pictures-3">
           <%= f.submit "Etape suivante", class: "btn-hover color-5", id: "submit-picture-2"%>
       </div>
 
