--- a/app/views/cars/final_validation.html.erb
+++ b/app/views/cars/final_validation.html.erb
@@ -13,34 +13,8 @@
   <div class="add-picture-wrapper">
     <div class="container-caroussel">
       <% if @car.photo_1.file.nil?%>
-        <div >  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
+        <div>  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
       <% else %>
-<!--       <div class="carousel">
-        <input type="radio" id="carousel-1" name="carousel[]" checked>
-        <input type="radio" id="carousel-2" name="carousel[]">
-        <input type="radio" id="carousel-3" name="carousel[]">
-        <ul class="carousel__items">
-          <li class="carousel__item"><img src="<%#= @car.photo_1%>" alt=""></li>
-          <li class="carousel__item"><img src="<%#= @car.photo_2%>" alt=""></li>
-          <li class="carousel__item"><img src="<%#= @car.photo_3%>" alt=""></li>
-        </ul>
-         <div class="carousel__prev">
-          <label for="carousel-1"></label>
-          <label for="carousel-2"></label>
-          <label for="carousel-3"></label>
-         </div>
-         <div class="carousel__next">
-           <label for="carousel-1"></label>
-           <label for="carousel-2"></label>
-           <label for="carousel-3"></label>
-         </div>
-         <div class="carousel__nav">
-           <label for="carousel-1"></label>
-           <label for="carousel-2"></label>
-           <label for="carousel-3"></label>
-         </div>
-      </div> -->
-
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
         <!-- Wrapper for slides -->
@@ -53,9 +27,6 @@
             <img src="<%= @car.photo_2%>" alt="">
           </div>
 
-          <div class="item">
-            <img src="<%= @car.photo_3%>" alt="">
-          </div>
         </div>
 
         <!-- Left and right controls -->
@@ -126,72 +97,26 @@
   </div>
 
   <div class="damages">
-    <h6>Dommages éventuels</h6>
+    <div class="damages-1-1">
+      <h5>Dommages éventuels</h5>
+    </div>
+    <div class="final-validation-line">
+    </div>
     <% @car.damages.each do |damage| %>
     <div class="damage">
       <h6><%= damage.title %></h6>
       <p><%= damage.description %></p>
       <div class="container-caroussel">
-        <% if @car.photo_1.file.nil?%>
+
+        <% if damage.picture_1.file.nil?%>
           <div >  <%= image_tag "avantgarde-concept-769583-unsplash.jpg", width: 400%></div>
         <% else %>
 
-<!--         <div class="carousel">
-          <input type="radio" id="carousel-4" name="carousel[]" checked>
-          <input type="radio" id="carousel-5" name="carousel[]">
-          <input type="radio" id="carousel-6" name="carousel[]">
-          <ul class="carousel__items">
-            <li class="carousel__item"><img src="<#%= damage.picture_1%>" alt=""></li>
-            <li class="carousel__item"><img src="<#%= damage.picture_2%>" alt=""></li>
-            <li class="carousel__item"><img src="<#%= damage.picture_3%>" alt=""></li>
-          </ul>
-           <div class="carousel__prev">
-            <label for="carousel-4"></label>
-            <label for="carousel-5"></label>
-            <label for="carousel-6"></label>
-           </div>
-           <div class="carousel__next">
-             <label for="carousel-4"></label>
-             <label for="carousel-5"></label>
-             <label for="carousel-6"></label>
-           </div>
-           <div class="carousel__nav">
-             <label for="carousel-4"></label>
-             <label for="carousel-5"></label>
-             <label for="carousel-6"></label>
-           </div>
-        </div> -->
-
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-          <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <img src="<%= damage.picture_1%>" alt="">
-            </div>
-
-            <div class="item">
-              <img src="<%= damage.picture_2%>" alt="">
-            </div>
-
-            <div class="item">
-              <img src="<%= damage.picture_3%>" alt="">
-            </div>
-          </div>
-
-          <!-- Left and right controls -->
-          <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        <div class="damage-picture-final-validation">
+          <img src="<%= damage.picture_1.url%>" alt="">
         </div>
 
          <% end %>
-       </div>
       <div class="button-damage">
         <%= link_to edit_car_damage_path(@car, damage) do %>
           <button class="btn btn-custom-2">Modifier</button>
@@ -204,11 +129,12 @@
         <% end %>
           <div class="damage-question-button">
             <%= link_to new_car_damage_path(@car) do %>
-              <button class="btn btn_primary">Ajouter un dommage</button>
+              <button class="btn btn-custom-3">Ajouter un dommage</button>
             <% end %>
           </div>
       </div>
     </div>
+  </div>
   </div>
 
   <div class="final-validation-last-modification">
