modif du soir :)

--- a/app/assets/stylesheets/pages/_damages.scss
+++ b/app/assets/stylesheets/pages/_damages.scss
@@ -90,3 +90,31 @@
   margin-right: 10px;
 }
 
+.color-13 {
+  background-image: linear-gradient(to left, #007ede, #0076e3, #006ee7, #0065ea, #125beb);;
+}
+
+.nature-damages {
+  .btn-hover {
+    margin: 0px;
+    margin-bottom: 5px;
+    height: 36px !important;
+    padding: 7px;
+    width: 50% !important;
+  }
+}
+
+.edit-pictures-3 {
+  .btn-hover {
+    margin: 0px;
+  }
+  margin-top: 20px;
+  margin-bottom: 20px;
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 10px;
+}
+
+
+
+
