--- a/app/views/damages/new.html.erb
+++ b/app/views/damages/new.html.erb
@@ -29,9 +29,11 @@
   <div id="form-damage">
     <div class="choose-form-damage-nature form-damage-nature">
       <div class="choose-form-damage-nature-container">
+
         <div class="choose-form-damage-nature-1">
-          <h13>Le dommage concerne:</h13>
+          <h5>Le dommage concerne:</h5>
         </div>
+
         <div class="choose-form-damage-nature-2">
           <ul style="margin-top:10px; margin-bottom:100px" class="damages-type">
             <li data-name="carrosserie" class="btn" data-target="form-carrosserie">
@@ -43,8 +45,8 @@
               <h4 id="damages-type-font">Mécanique</h4>
             </li>
           </ul>
-
         </div>
+
       </div>
     </div>
 
@@ -85,7 +87,8 @@
             <%= f.input :description, label: "Description", as: :text %>
           </div>
 
-          <div id="damage-camera-button"> test </div>
+          <div id="damage-camera-button" class="btn-hover color-13">Ajouter une photo</div>
+
         </div>
 
         <div class="nature-damages-4">
