test in production

--- a/app/views/cars/start.html.erb
+++ b/app/views/cars/start.html.erb
@@ -11,7 +11,7 @@
 
     <div class="start-title">
       <h13>Pour commencer, <br/>rendez-vous près de votre voiture !</h13>
-      <p style="padding:20px"><strong>Karl</strong> a besoin de votre kilometrage exact, <br/>et de quelques photos</p>
+      <p style="padding:20px"><strong>Karl</strong> a besoin de votre kilométrage exact, <br/>et de quelques photos</p>
     </div>
 
     <div class="car-image">
