--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: space-between;
   background-color: white;
-  vertical-align: middle;
+  align-items: center;
 }
 
 .price-card {
